--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Hind:wght@300&family=Inter:wght@300&family=Open+Sans:wght@300&family=Raleway:ital,wght@1,300&family=Roboto:wght@300&family=Sedgwick+Ave&family=Source+Code+Pro:ital,wght@1,200&display=swap");
 
 body {
-  background: url(https://source.unsplash.com/random?nature/1366%C3%97768);
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)),
+    url(https://source.unsplash.com/random?nature/1366%C3%97768);
   background-repeat: no-repeat;
   height: 100vh;
   -webkit-background-size: cover;
