added weather and focus functionality

--- a/src/Components/Clock/Clock.css
+++ b/src/Components/Clock/Clock.css
@@ -1,4 +1,4 @@
-.clock-container {
+/* .clock-container {
   height: 100vh;
   color: var(--white);
   font-size: 5rem;
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
+} */
 
 .hourandminute:hover {
   cursor: pointer;
