--- a/src/Components/Focus/Focus.css
+++ b/src/Components/Focus/Focus.css
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: column;
   width: 500px;
+  font-family: var(--main-font);
+  margin-top: 1rem;
 }
 
 .focus-message {
