--- a/src/Components/Weather/Weather.css
+++ b/src/Components/Weather/Weather.css
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
   gap: 0;
+  cursor: pointer;
+  font-family: var(--main-font);
 }
 
 .weather-container p {
@@ -18,6 +20,7 @@
 .icon-container {
   display: flex;
   width: max-content;
+  font-size: 1rem;
 }
 
 .weather-icon {
@@ -31,4 +34,55 @@
 
 .city-name {
   margin-left: 1.5rem;
+}
+
+.weathermodal {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  background-color: aqua;
+  position: absolute;
+  top: 4.5rem;
+  right: 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+  width: 20rem;
+  border-radius: 1rem;
+  background-color: var(--modal-bg);
+  padding: 1rem;
+  font-family: var(--main-font);
+}
+
+.weathermodal city {
+  font-size: 1rem;
+  align-self: flex-start;
+}
+
+.coords {
+  font-size: 0.7rem;
+  display: flex;
+  gap: 1rem;
+}
+
+.weathermodal condition {
+  font-size: 2rem;
+  align-self: flex-start;
+}
+
+.icon-temp {
+  display: flex;
+}
+
+.weathermodal min {
+  font-size: 1rem;
+  align-self: flex-start;
+}
+
+.weathermodal max {
+  font-size: 1rem;
+  align-self: flex-start;
+}
+.weathermodal feelslike {
+  font-size: 1rem;
+  align-self: flex-start;
 }
